2005-12-10  Mike Kestner  <mkestner@novell.com>

	* generator/Signal.cs : pass byte cnt for autogenerated string length
	parameters.  Thanks to Itamar Rogel for the report and a candidate
	patch. [Fixes #76952]

2005-12-10  Mike Kestner  <mkestner@novell.com>

	* gtk/gtk-api-2.8.raw : regenerated.
	* gtk/IconView.custom : manually implement a new interface method.
	* parser/gapi_pp.pl : more general G_DEFINE_TYPE_WITH_CODE parsing
	implementation.
	[Fixes #76266]

2005-12-10  Mike Kestner  <mkestner@novell.com>

	* gdk/gdk-symbols.xml : add GrabBroken mapping.
	* gdk/Event.cs : add GrabBroken to GetEvent.
	* gdk/EventGrabBroken.cs : manual Event subclass.
	* gdk/Gdk.metadata : hide new GrabBroken event.
	* gdk/Makefile.am : add new source file.

2005-12-09  Mike Kestner  <mkestner@novell.com>

	* pango/Pango.metadata : 2.8 API tweaks
	* gdk/Gdk.metadata : 2.8 API tweaks
	* gtk/Gtk.metadata : 2.8 API tweaks
	* gtk/IconView.custom : overloads for the weird ScrollToPath.
	* gtk/Makefile.am : add custom

2005-11-19  Mike Kestner  <mkestner@novell.com>

	* generator/ManualGen.cs (CallByName): add null handling.
	[Fixes #76540]

2005-11-15  Ben Maurer  <bmaurer@ximian.com>

	* gdk/Rectangle.custom: Fix up Intersect using p/invoke, per
	miguel's request.

2005-11-10  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.6 - renamed from bootstrap
	* bootstrap-2.8 : renamed from bootstrap-for-the-insane, removed
	message of doom, require Gtk 2.8. Change version to 2.7.1.

2005-10-31  Wade Berrier <wberrier@novell.com>

	* .pc and wrapper scripts: Use relative paths so gtk-sharp is 
	relocatable

2005-10-19  Mike Kestner  <mkestner@novell.com>

	* gtk/TextBuffer.custom : add some obsolete overloads for backward
	compat with some not-completely-unusable 1.0.x methods.

2005-10-19 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* glib/Object.cs: remove the fast path. It was causing troubles with
	MD.

2005-10-19  Mike Kestner  <mkestner@novell.com>
