@@ -31,7 +31,7 @@
       </Docs>
     </Member>
     <Member MemberName="NodeStore">
-      <MemberSignature Language="C#" Value="public Gtk.NodeStore NodeStore { get; };" />
+      <MemberSignature Language="C#" Value="public Gtk.NodeStore NodeStore { set; get; };" />
       <MemberType>Property</MemberType>
       <ReturnValue>
         <ReturnType>Gtk.NodeStore</ReturnType>
@@ -73,6 +73,15 @@
         <param name="cell">a <see cref="T:Gtk.CellRenderer" /></param>
         <param name="cell_data">a <see cref="T:Gtk.NodeCellDataFunc" /></param>
         <returns>a <see cref="T:Gtk.TreeViewColumn" /></returns>
+        <remarks />
+      </Docs>
+    </Member>
+    <Member MemberName=".ctor">
+      <MemberSignature Language="C#" Value="public NodeView ();" />
+      <MemberType>Constructor</MemberType>
+      <Parameters />
+      <Docs>
+        <summary>Public Constructor.</summary>
         <remarks />
       </Docs>
     </Member>
