@@ -18,9 +18,6 @@
 // Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 // Boston, MA 02111-1307, USA.
 
-// This file was generated by the Gtk# code generator.
-// Any changes made will be lost if regenerated.
-
 namespace Gtk {
 
 	using System;
@@ -42,9 +39,18 @@ namespace Gtk {
 			this.store = store;
 		}
 
+		public NodeView () : base () {}
+
+		[DllImport("libgtk-win32-2.0-0.dll")]
+		static extern void gtk_tree_view_set_model(IntPtr raw, IntPtr model);
+
 		public NodeStore NodeStore {
 			get {
 				return store;
+			}
+			set {
+				store = value;
+				gtk_tree_view_set_model (Handle, store == null ? IntPtr.Zero : store.Handle);
 			}
 		}
 
