@@ -1,4 +1,9 @@
-2005-12-10  Mike Kestner  <mkestner@novell.com>
+2005-12-12  Itamar Rogel  <chastamar@yahoo.com>
+
+	* NodeView.cs : add default ctor and NodeStore setter.
+	[Fixes #76827]
+
+2005-12-12  Mike Kestner  <mkestner@novell.com>
 
 	* generator/Signal.cs : pass byte cnt for autogenerated string length
 	parameters.  Thanks to Itamar Rogel for the report and a candidate
